<resources>
    <string name="app_name">Inventory</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="delete_all_products">delete all products</string>
    <string name="product_name">Product Name</string>
    <string name="number">number</string>
    <string name="price">Price</string>
    <string name="_0_00">$0.00</string>
    <string name="name">name</string>
    <string name="quantity">0</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="plus_quantity">+</string>
    <string name="minus_quantity">-</string>
    <string name="call">call</string>
    <string name="insert">insert</string>
    <string name="empty_view_header_text">No inventory available</string>
    <string name="empty_view_text">Click the add button to create a product. \nProduct name, price, quatity, supplier name and supplier phone number are required.</string>

</resources>
