<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.huza.inventory.ProductDetail">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:id="@+id/product_name"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:fontFamily="sans-serif"
            android:textColor="#2e2222"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:id="@+id/edit_product"
            android:textColor="#705252"
            android:layout_marginTop="7dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="1dp"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_name"
            android:id="@+id/supplier_name"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:fontFamily="sans-serif"
            android:textColor="#2e2222"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:id="@+id/edit_supplier"
            android:textColor="#705252"
            android:layout_marginTop="7dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="1dp"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/call_b"
            android:background="#90b498"
            android:id="@+id/call"
            android:layout_marginStart="40dp"
            android:layout_marginTop="7dp"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:contentDescription="@string/call" />

        <EditText
            android:id="@+id/edit_phonesupplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="1dp"
            android:fontFamily="sans-serif"
            android:hint="@string/number"
            android:inputType="number"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#705252" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="#90b498"
            android:id="@+id/plus_quantity"
            android:layout_marginStart="40dp"
            android:text="@string/plus_quantity"
            android:layout_marginTop="7dp"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            />

        <EditText
            android:id="@+id/edit_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="1dp"
            android:text="@string/quantity"
            android:inputType="number"
            android:textColor="#705252" />

        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="#90b498"
            android:text="@string/minus_quantity"
            android:id="@+id/minus_quantity"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:id="@+id/price"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:fontFamily="sans-serif"
            android:textColor="#2e2222"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_0_00"
            android:inputType="number"
            android:id="@+id/edit_price"
            android:textColor="#705252"
            android:layout_marginTop="7dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="1dp"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            />
    </LinearLayout>

</LinearLayout>
